# lanmonitor

./: Cargo.toml  README.md
frontend/: index.html  package.json
frontend/src/: App.vue  base.css  main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: GenericPopup.vue  IpConfig.vue  RefreshIntervalConfig.vue
frontend/src/pages/: Home.vue  Settings.vue
frontend/src/router/: index.ts
src/: main.rs
src/routes/: components.rs  mod.rs  sensors.rs  staticsystem.rs  system.rs  temperatures.rs
